# CFDCourse22

./: .gitignore  D1Lin.m  D1Sqr.m  D2Lin_Quad.m  D2Lin_Rect.m  exam.txt  fem1.m  fem1_elembased.m  fem1_sqr.m  fem1_transport.m  fem1_vertbased.m  fem2.m  femutils.m  fvm1.m  fvm2.m  grid2utils.m  impl_grid2utils.m  lectures.txt  tasks.txt
analytic/: fem_lin_segm.wxmx  fem_rect.wxmx  fem_sqr_segm.wxmx
grid_examples/: hole_tri_475.m  quad_227.m  simple_celldata.vtk  simple_vertdata.vtk  tri_1000.m  tri_26.m  tri_5000.m
instructions/: SparseMatrix-cpp.txt  gmsh-tutorial.txt  matsolver.cpp
ns/: .syntastic_cpp_config_file  CMakeLists.txt  a.gdb  readme.txt  winbuild64.bat
ns/input_data/: rect1.vtk
ns/lib/: CMakeLists.txt  checks.hpp  common.hpp  geom.hpp  readme.txt
ns/lib/appr/: fe_element.cpp  fe_element.hpp  fe_linear_quadrangle.cpp  fe_linear_quadrangle.hpp  fe_linear_segment.cpp  fe_linear_segment.hpp  fe_linear_triangle.cpp  fe_linear_triangle.hpp  fem_approximator.cpp  fem_approximator.hpp  fvm_approximator.cpp  fvm_approximator.hpp  fvolume.cpp  fvolume.hpp  linear_fem_approximator.cpp  linear_fem_approximator.hpp  spatial_approximator.cpp  spatial_approximator.hpp
ns/lib/dbg/: printer.cpp  printer.hpp
ns/lib/grid/: grid.cpp  grid.hpp  grid_boundary.cpp  grid_boundary.hpp  grid_builder.cpp  grid_builder.hpp
ns/lib/prob/: monitor.cpp  nonstationary_problem.cpp  nonstationary_problem.hpp  poisson_solver.cpp  poisson_solver.hpp
ns/lib/psi_omega/: psi_omega_bc.hpp  psi_omega_semi_imp_vc.cpp  psi_omega_semi_imp_vc.hpp  psi_omega_solver.cpp  psi_omega_solver.hpp
ns/lib/slae/: a_jacobi_seidel_solver.cpp  a_jacobi_seidel_solver.hpp  a_matrix_solver.cpp  a_matrix_solver.hpp  amgcl_matrix_solver.cpp  amgcl_matrix_solver.hpp  csrmat.cpp  csrmat.hpp  jacobi_solver.cpp  jacobi_solver.hpp  jacoby_solver.cpp  jacoby_solver.hpp  matrix_solver.hpp  seidel_solver.cpp  seidel_solver.hpp  sor_matrix_solver.cpp  sor_matrix_solver.hpp  test_solver.cpp  test_solver.hpp
ns/progs/: CMakeLists.txt  grids_test.cpp  poisson.cpp  psi_omega_semi_imp.cpp  test_jacoby_solver.cpp
ns/progs/tests/: CMakeLists.txt  test_jacobi_solver.cpp  test_jacoby_solver.cpp  test_seidel_solver.cpp
